--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-activity": "^2.1.3",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-pro-sidebar": "1.0.0-alpha.7",
     "react-router-dom": "6.4.3",
     "react-scripts": "5.0.1",
