--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-activity": "^2.1.3",
     "react-bootstrap": "^2.7.2",
